--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -32,18 +32,20 @@
                         </svg>
                     </div>
                 </div>
-                <div *ngFor="let task of tasks" class="task" id="{{ task.id }}" #dap draggable="true">
-                    <div class="task-area">                       
-                        <div class="task-category" [style.background]="task.color">{{ task.newCategory }}</div>
-                        <div class="task-subtask">{{ task.newSubtask }}</div>
-                        <div class="task-description">{{ task.description }}</div>
-                    </div>
-                    <div class="status">
-                        <div class="status-bar"></div>
-                        <div></div>
-                    </div>
-                    <div class="contact-icons">
-
+                <div *ngFor="let task of tasks" #dap draggable="true" >
+                    <div *ngIf="task.id === 'todo'" class="task">
+                        <div class="task-area">                       
+                            <div class="task-category" [style.background]="task.color">{{ task.newCategory }}</div>
+                            <div class="task-subtask">{{ task.newSubtask }}</div>
+                            <div class="task-description">{{ task.description }}</div>
+                        </div>
+                        <div class="status">
+                            <div class="status-bar"></div>
+                            <div class="types">1/2 Done</div>
+                        </div>
+                        <div *ngFor="let contact of contactsView" class="contact-icons">
+                            <div class="initials-container" [style.background]="contact.color">{{ contact.initials }}</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -60,18 +62,20 @@
                         </svg>
                     </div>
                 </div>
-                <div *ngFor="let task of tasks" class="task" #dap draggable="true">
-                    <div class="task-area">                       
-                        <div class="task-category" [style.background]="task.color">{{ task.newCategory }}</div>
-                        <div class="task-subtask">{{ task.newSubtask }}</div>
-                        <div class="task-description">{{ task.description }}</div>
-                    </div>
-                    <div class="status">
-                        <div class="status-bar"></div>
-                        <div></div>
-                    </div>
-                    <div class="contact-icons">
+                <div *ngFor="let task of tasks" #dap draggable="true">
+                    <div *ngIf="task.id === 'inProgress'" class="task">
+                        <div class="task-area">                       
+                            <div class="task-category" [style.background]="task.color">{{ task.newCategory }}</div>
+                            <div class="task-subtask">{{ task.newSubtask }}</div>
+                            <div class="task-description">{{ task.description }}</div>
+                        </div>
+                        <div class="status">
+                            <div class="status-bar"></div>
+                            <div class="types">1/2 Done</div>
+                        </div>
+                        <div class="contact-icons">
 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -88,18 +92,20 @@
                         </svg>
                     </div>
                 </div>
-                <div *ngFor="let task of tasks" class="task" #dap draggable="true">
-                    <div class="task-area">                       
-                        <div class="task-category" [style.background]="task.color">{{ task.newCategory }}</div>
-                        <div class="task-subtask">{{ task.newSubtask }}</div>
-                        <div class="task-description">{{ task.description }}</div>
-                    </div>
-                    <div class="status">
-                        <div class="status-bar"></div>
-                        <div></div>
-                    </div>
-                    <div class="contact-icons">
+                <div *ngFor="let task of tasks" #dap draggable="true">
+                    <div *ngIf="task.id === 'awaitingFeedback'" class="task">
+                        <div class="task-area">                       
+                            <div class="task-category" [style.background]="task.color">{{ task.newCategory }}</div>
+                            <div class="task-subtask">{{ task.newSubtask }}</div>
+                            <div class="task-description">{{ task.description }}</div>
+                        </div>
+                        <div class="status">
+                            <div class="status-bar"></div>
+                            <div class="types">1/2 Done</div>
+                        </div>
+                        <div class="contact-icons">
 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -116,18 +122,20 @@
                         </svg>
                     </div>
                 </div>
-                <div *ngFor="let task of tasks" class="task" #dap draggable="true">
-                    <div class="task-area">                       
-                        <div class="task-category" [style.background]="task.color">{{ task.newCategory }}</div>
-                        <div class="task-subtask">{{ task.newSubtask }}</div>
-                        <div class="task-description">{{ task.description }}</div>
-                    </div>
-                    <div class="status">
-                        <div class="status-bar"></div>
-                        <div></div>
-                    </div>
-                    <div class="contact-icons">
+                <div *ngFor="let task of tasks" #dap draggable="true">
+                    <div *ngIf="task.id === 'done'" class="task">
+                        <div class="task-area">                       
+                            <div class="task-category" [style.background]="task.color">{{ task.newCategory }}</div>
+                            <div class="task-subtask">{{ task.newSubtask }}</div>
+                            <div class="task-description">{{ task.description }}</div>
+                        </div>
+                        <div class="status">
+                            <div class="status-bar"></div>
+                            <div class="types">1/2 Done</div>
+                        </div>
+                        <div class="contact-icons">
 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -176,10 +184,9 @@
                                         </div>
                                     </div>
                                     <div class="category" *ngFor="let category of categories.slice(1); let i = index"
-                                        (click)="updateEditCategory($event)" attr.data-target="{{ i + 1 }}">
+                                            (click)="updateEditCategory($event)" attr.data-target="{{ i + 1 }}">
                                         <div class="category-text">{{ category }}</div>
-                                        <div (click)="selectColor(i)" class="color-dot" [ngClass]="getColorClass(i)">
-                                        </div>
+                                        <div (click)="selectColor(i)" class="color-dot" [ngClass]="getColorClass(i)"></div>
                                     </div>
                                 </div>
                             </div>
@@ -270,7 +277,7 @@
                         </div>
                         <div class="action-button-container">
                             <button (click)="clearTaskForm()">Clear<img src="./assets/img/icon_close.png"></button>
-                            <button (click)="createTask(['id'])">Create Task<img src="./assets/img/icon_create.png"></button>
+                            <button (click)="createTask(id)">Create Task<img src="./assets/img/icon_create.png"></button>
                         </div>
                     </div>
                 </div>
