--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -135,7 +135,6 @@ ul {
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    font-weight: 500;
 }
 
 .task-subtask {
@@ -177,7 +176,7 @@ ul {
 
 .task {
     width: 220px;
-    height: 160px;
+    height: auto;
     margin-top: 30px;
     background-color: white;
     border-radius: 18px;
@@ -189,7 +188,40 @@ ul {
     cursor: move;
 
     &:hover {
-        border: 3px solid var(--c-lightblue)
+        border: 1px solid var(--c-lightblue)
+    }
+
+    .status {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        padding: 7px;
+    
+        .status-bar {
+            width: 125px;
+            height: 10px;
+            border-radius: 3px;
+            background-color: var(--dimmed);
+        }
+    
+        .types {
+            font-family: 'Inter';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 12px;
+            color: var(--c-darkblue);
+        }
+    
+        .contact-icons {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 10px 8px;
+            width: 200px;
+        }
     }
 }
 
