--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -75,8 +75,10 @@
                             <div class="status-bar"></div>
                             <div class="types">1/2 Done</div>
                         </div>
-                        <div class="contact-icons">
-
+                        <div *ngFor="let viewContact of contactsToView" class="contact-icons">
+                            <div class="initials-container" [style.background]="viewContact.color">
+                                {{ viewContact.initials }}
+                            </div>                        
                         </div>
                     </div>
                 </div>
@@ -104,6 +106,11 @@
                         <div class="status">
                             <div class="status-bar"></div>
                             <div class="types">1/2 Done</div>
+                        </div>
+                        <div *ngFor="let viewContact of contactsToView" class="contact-icons">
+                            <div class="initials-container" [style.background]="viewContact.color">
+                                {{ viewContact.initials }}
+                            </div>                        
                         </div>
                     </div>
                 </div>
