--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -214,7 +214,7 @@ ul {
             color: var(--c-darkblue);
         }
     
-        .contact-icons {
+        .contactView {
             position: relative;
             bottom: 44px;
             left: 22px;
