--- a/src/app/header-template/header-template.component.html
+++ b/src/app/header-template/header-template.component.html
@@ -2,7 +2,7 @@
   <h1>Kanban Project Management tool</h1>
   <div class="header-image-container">
     <img class="info" src="assets/img/icon_help.png" alt="#"/>
-    <img class="user" (click)="openCloseLogout()" src="assets/img/icon_person.png" alt="#"/>
+    <img class="user" (click)="logout()" src="./assets/img/icon_person.png" alt="#"/>
   </div>
 </div>
 
