--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,13 +2,13 @@
     <div>
         <img src="assets/img/join_logo_light.png" alt="#" />
     </div>
-    <div class="nav-item"><img src="./assets/img/summary_normal.png" alt="#" /><span>Summary</span>
+    <div (click)="renderSummary()" class="nav-item"><img src="./assets/img/summary_normal.png" alt="#" /><span>Summary</span>
     </div>
-    <div class="nav-item"><img src="assets/img/addtask_normal.png" alt="#" /><span>Add Task</span>
+    <div (click)="renderAddTask()" class="nav-item"><img src="assets/img/addtask_normal.png" alt="#" /><span>Add Task</span>
     </div>
-    <div class="nav-item"><img src="assets/img/board_normal.png" alt="#" /><span>Board</span>
+    <div (click)="renderBoard()" class="nav-item"><img src="assets/img/board_normal.png" alt="#" /><span>Board</span>
     </div>
-    <div class="nav-item"><img src="assets/img/icon_vector_contacts.png" alt="#" /><span>Contacts</span>
+    <div (click)="renderContacts()" class="nav-item"><img src="assets/img/icon_vector_contacts.png" alt="#" /><span>Contacts</span>
     </div>
-    <div class="nav-item legal-notice"><img src="assets/img/icon_legal_notice.png" alt="#" /><span>Legal Notice</span></div>
+    <div (click)="renderLegalNotice()" class="nav-item legal-notice"><img src="assets/img/icon_legal_notice.png" alt="#" /><span>Legal Notice</span></div>
 </div>
