--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -12,15 +12,15 @@
         <div class="summary-content">
             <div class="summary-content-left">
                 <div class="row">
-                    <div class="card-row-1" onclick="window.location.href='board.html'">
+                    <div class="card-row-1">
                         <span class="f-64" id="amountAll">5</span>
                         <span class="f-21">Tasks in Board</span>
                     </div>
-                    <div class="card-row-1" onclick="window.location.href='board.html'">
+                    <div class="card-row-1">
                         <span class="f-64" id="amountProgress">2</span>
                         <span class="f-21">Tasks in Progress</span>
                     </div>
-                    <div class="card-row-1" onclick="window.location.href='board.html'">
+                    <div class="card-row-1">
                         <span class="f-64" id="amountFeedback">2</span>
                         <span class="f-21">Awaiting Feedback</span>
                     </div>
@@ -30,7 +30,7 @@
                     <div class="card-row-2">
                         <div class="card-row-2-left">
                             <div>
-                                <img src="assets/img/icon_urgent.png" />
+                                <img src="./assets/img/icon_urgent.png" />
                             </div>
                             <div class="amount">
                                 <span class="f-47" id="amountUrgent">1</span>
@@ -46,22 +46,18 @@
                 </div>
 
                 <div class="row">
-                    <div class="card-row-3" onclick="window.location.href='board.html'"
-                        onmouseover="changeHoverIcon('iconPen', 'assets/img/icon_pen.svg')"
-                        onmouseout="changeHoverIcon('iconPen', 'assets/img/icon_pen_white.svg')">
+                    <div class="card-row-3">
                         <div>
-                            <img id="iconPen" src="assets/img/icon_pen.svg" />
+                            <img id="iconPen" src="./assets/img/icon_pen.svg" />
                         </div>
                         <div class="amount">
                             <span class="f-64" id="amountToDo">1</span>
                             <span class="f-21">To-Do</span>
                         </div>
                     </div>
-                    <div class="card-row-3" onclick="window.location.href='board.html'"
-                        onmouseover="changeHoverIcon('iconCheck', 'assets/img/icon_check.svg')"
-                        onmouseout="changeHoverIcon('iconCheck', 'assets/img/icon_check_white.svg')">
+                    <div class="card-row-3">
                         <div>
-                            <img id="iconCheck" src="assets/img/icon_check.svg" />
+                            <img id="iconCheck" src="./assets/img/icon_check.svg" />
                         </div>
                         <div class="amount">
                             <span class="f-64" id="amountDone">1</span>
