--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,27 +1,31 @@
-<form [formGroup]="form" class="form-card">
-    <img src="./assets/img/icon_back.png" alt="arrow" class="go-back" (click)="renderLogin()">
-    <h1>Sign Up</h1>
-    <img src="./assets/img/icon_line.png" class="line">
-    <div class="user-input">
-        <input type="text" placeholder="Your Name" formControlName="name">
-        <img src="./assets/img/icon_name.png"/>
-        <div *ngIf="form.controls['name'].invalid && form.controls['name'].touched">
-            <div class="error-massage" *ngIf="form.controls['name'].errors?.['required']">Username is required.</div>
+<div class="card-container">
+    <form [formGroup]="form" class="form-card">
+        <img src="./assets/img/icon_back.png" alt="arrow" class="go-back" (click)="renderLogin()">
+        <h1>Sign Up</h1>
+        <img src="./assets/img/icon_line.png" class="line">
+        <div class="user-input">
+            <input type="text" placeholder="Your Name" formControlName="name">
+            <img src="./assets/img/icon_name.png" />
+            <div *ngIf="form.controls['name'].invalid && form.controls['name'].touched">
+                <div class="error-massage" *ngIf="form.controls['name'].errors?.['required']">Username is required.
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="user-input">
-        <input type="email" placeholder="Email" formControlName="email">
-        <img src="./assets/img/icon_mail.png" />
-        <div *ngIf="form.controls['email'].invalid && form.controls['email'].touched">
-            <div class="error-massage" *ngIf="form.controls['email'].errors?.['required']">Email is required.</div>
+        <div class="user-input">
+            <input type="email" placeholder="Email" formControlName="email">
+            <img src="./assets/img/icon_mail.png" />
+            <div *ngIf="form.controls['email'].invalid && form.controls['email'].touched">
+                <div class="error-massage" *ngIf="form.controls['email'].errors?.['required']">Email is required.</div>
+            </div>
         </div>
-    </div>
-    <div class="user-input">
-        <input type="password" placeholder="Password" formControlName="password">
-        <img src="./assets/img/icon_lock.png" />
-        <div *ngIf="form.controls['password'].invalid && form.controls['password'].touched">
-            <div class="error-massage" *ngIf="form.controls['password'].errors?.['required']">Password is required.</div>
+        <div class="user-input">
+            <input type="password" placeholder="Password" formControlName="password">
+            <img src="./assets/img/icon_lock.png" />
+            <div *ngIf="form.controls['password'].invalid && form.controls['password'].touched">
+                <div class="error-massage" *ngIf="form.controls['password'].errors?.['required']">Password is required.
+                </div>
+            </div>
         </div>
-    </div>
-    <button class="sign-up" (click)="submit()" cdkFocusInitial>Submit</button>
-</form>
+        <button class="sign-up" (click)="submit()" cdkFocusInitial>Submit</button>
+    </form>
+</div>
