--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
 <div class="card-container">
     <form [formGroup]="form" class='form-card'>
         <img src="./assets/img/icon_back.png" alt="arrow" class="go-back" (click)="renderLogin()">
-        <h1>I forgot my password</h1>
+        <h1>Reset  password</h1>
         <img src="./assets/img/icon_line.png" class="line">
         <h4>In order to reset your password enter account E-Mail below in order to receive instructions on how to
             change your password.</h4>
@@ -13,6 +13,6 @@
             </div>
             <p id="noUser"></p>
         </div>
-        <button class="sign-up" (click)="findUserMail()">Send Email</button>
+        <button class="sign-up" (click)="resetPassword()">Send Email</button>
     </form>
 </div>
