--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
         <h1>Log in</h1>
         <img src="./assets/img/icon_line.png" class="line">
         <div class='user-input'>
-            <input placeholder="Your Email" formControlName="email" />
+            <input type="email" id="login-mail" autocomplete="username" placeholder="Your Email" formControlName="email" />
             <div *ngIf="form.controls['email'].invalid && form.controls['email'].touched">
                 <div class="error-massage" *ngIf="form.controls['email'].errors?.['required']">Email is required.
                 </div>
@@ -22,7 +22,7 @@
             <img src="./assets/img/icon_mail.png" />
         </div>
         <div class="user-input">
-            <input placeholder="Your Password" formControlName="password" />
+            <input type="password" id="login-password" autocomplete="current-password"  placeholder="Your Password" formControlName="password" />
             <div *ngIf="form.controls['password'].invalid && form.controls['password'].touched">
                 <div class="error-massage" *ngIf="form.controls['password'].errors?.['required']">Password is
                     required.
@@ -36,11 +36,11 @@
                     <input type="checkbox" id="checkbox" />
                     <p>Remember me</p>
                 </div>
-                <button (click)="logIn()">Log in</button>
+                <button (click)="signIn()">Log in</button>
             </div>
             <div class="column2">
                 <p (click)="renderForgotPassword()">Forgot my password</p>
-                <button id="guestLogin">Guest Log in</button>
+                <button (click)="guestLogin()">Guest Log in</button>
             </div>
         </div>
     </form>
