--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -106,6 +106,14 @@
     transform: translateY(-50%);
 }
 
+.error-massage {
+    position: absolute;
+    left: 10px;
+    top: 45px;
+    font-size: .8rem;
+    color: var(--c-darkblue);
+}
+
 .login-options-container {
     display: flex;
     width: 80%;
