--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -3,16 +3,25 @@
         <img src="./assets/img/icon_back.png" alt="arrow" class="go-back" (click)="renderLogin()">
         <h1>Reset  password</h1>
         <img src="./assets/img/icon_line.png" class="line">
-        <h4>In order to reset your password enter account E-Mail below in order to receive instructions on how to
-            change your password.</h4>
+        <h4>Change your account password</h4>
         <div class="user-input">
-            <input type="email" placeholder="Email" formControlName="email">
-            <img src="./assets/img/icon_mail.png" />
-            <div *ngIf="form.controls['email'].invalid && form.controls['email'].touched">
-                <div class="error-massage" *ngIf="form.controls['email'].errors?.['required']">Email is required.</div>
+            <input type="password" placeholder="Your Password" formControlName="password" />
+            <div *ngIf="form.controls['password'].invalid && form.controls['password'].touched">
+                <div class="error-massage" *ngIf="form.controls['password'].errors?.['required']">Password is
+                    required.
+                </div>
             </div>
-            <p id="noUser"></p>
+            <img src="./assets/img/icon_lock.png" />
         </div>
-        <button class="sign-up" (click)="resetPassword()">Send Email</button>
+        <div class="user-input">
+            <input type="password" placeholder="Confirm Password" formControlName="password" />
+            <div *ngIf="form.controls['password'].invalid && form.controls['password'].touched">
+                <div class="error-massage" *ngIf="form.controls['password'].errors?.['required']">Password is
+                    required.
+                </div>
+            </div>
+            <img src="./assets/img/icon_lock.png" />
+        </div>
+        <button class="sign-up" (click)="resetPassword()">Confirm</button>
     </form>
 </div>
