--- a/src/app/header-template/header-template.component.html
+++ b/src/app/header-template/header-template.component.html
@@ -4,7 +4,7 @@
     <img class="info" src="assets/img/icon_help.png" alt="#"/>
     <img class="icon-user" (click)="tooltip()" src="./assets/img/icon_person.png" alt="#"/>
   </div>
-  <div *ngIf="tooltips" id="tooltip" class="logout-tooltip" (click)="logout()" style="display: block;">Logout</div>
+  <div *ngIf="tooltips" class="logout-tooltip" (click)="logout()">Logout</div>
 </div>
 
 
