--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -36,7 +36,7 @@
                     <input type="checkbox" id="checkbox" />
                     <p>Remember me</p>
                 </div>
-                <button (click)="signIn()">Log in</button>
+                <button (click)="login()">Log in</button>
             </div>
             <div class="column2">
                 <p (click)="renderForgotPassword()">Forgot my password</p>
