--- a/src/app/header-template/header-template.component.scss
+++ b/src/app/header-template/header-template.component.scss
@@ -34,7 +34,7 @@
     }
 
     h1 {
-        margin-left: 80px;
+        margin-left: 60px;
         font-size: 21px;
     }
 
@@ -46,5 +46,6 @@
         position: absolute;
         top: 7%;
         right: 3%;
+        cursor: pointer;
     }
 }
